# serpapi-mcp

./: .env.example  .gitignore  Dockerfile  README.md  build-engines.py  pyproject.toml  server.json
.github/workflows/: README.md  deploy.yml  python-package.yml  tests.yml
copilot/: .workspace
copilot/mcp-server-api/: manifest.yml
copilot/mcp-server-api/overrides/: cfn.patches.yml
docs/: oauth-design.md
engines/: amazon.json  amazon_product.json  apple_app_store.json  apple_maps.json  apple_maps_places.json  apple_product.json  apple_reviews.json  baidu.json  baidu_news.json  bing.json  bing_copilot.json  bing_images.json  bing_maps.json  bing_news.json  bing_product.json  bing_reverse_image.json  bing_shopping.json  bing_videos.json  brave_ai_mode.json  duckduckgo.json  duckduckgo_light.json  duckduckgo_maps.json  duckduckgo_news.json  ebay.json  ebay_product.json  facebook_profile.json  google.json  google_about_this_result.json  google_ads.json  google_ads_transparency_center.json  google_ads_transparency_center_ad_details.json  google_ai_mode.json  google_ai_overview.json  google_autocomplete.json  google_events.json  google_finance.json  google_finance_markets.json  google_flights.json  google_flights_autocomplete.json  google_flights_deals.json  (+76 more)
src/: server.py  version.py
src/mcp_components/: apps.py  resources.py  tools.py
tests/: README.md  __init__.py  test_e2e_docker.py  test_integration.py  test_server.py
