[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serpapi-mcp-server"
version = "0.4.0"
description = "A Model Context Protocol (MCP) server implementation that integrates with SerpApi for comprehensive search engine results and data extraction"
readme = "README.md"
license = "MIT"
authors = [
    { name = "SerpApi", email = "hello@serpapi.com" }
]
keywords = ["mcp", "serpapi", "search", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp[apps]>=3.4.2",
    # Prefab (the MCP Apps UI library) ships frequent breaking changes and
    # fastmcp does not pin an upper bound, so pin it explicitly here.
    "prefab-ui>=0.20.2,<0.21",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.38.0",
    # >=1.0.1 avoids CVE-2026-48710 (fastmcp 3.4.1 floors this transitively).
    "starlette>=1.0.1",
    "serpapi>=0.1.5",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2",
    "black>=23.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/serpapi/mcp-server"
Repository = "https://github.com/serpapi/mcp-server"
Issues = "https://github.com/serpapi/mcp-server/issues"
Documentation = "https://github.com/serpapi/mcp-server#readme"

[project.scripts]
serpapi-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
